# Buddhabrot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h  glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
include/: abstract_image.h  compressed_image.h  generator.h  generator_info.h  generator_panel.h  helper.h  image.h  image_converter.h  mandelbrot_helper.h  monte_carlo_sampler.h  sampler.h  types.h  uniform_sampler.h
include/generator/: generator.h
include/gui/: generator_panel.h
include/image/: abstract_image.h  compressed_image.h  image.h
include/sampler/: monte_carlo_sampler.h  monte_carlo_tree.h  uniform_sampler.h
src/: generator.cpp  generator_info.cpp  generator_panel.cpp  image.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp  monte_carlo_sampler.cpp  monte_carlo_tree.cpp  uniform_sampler.cpp
src/generator/: generator.cpp  generator_info.cpp
src/gui/: generator_panel.cpp
src/image/: image.cpp
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/sampler/: monte_carlo_sampler.cpp  monte_carlo_tree.cpp  uniform_sampler.cpp
